// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | DateTime Date Time 1`] = `
<time>
  1/18/1970, 23:53
</time>
`;

exports[`Storyshots Atoms | DateTime Invalid Value Story 1`] = `"-"`;

exports[`Storyshots Atoms | DateTime Uses Custom Symbol For Invalid Value 1`] = `"X"`;

exports[`Storyshots Atoms | DateTime With Date As Iso 8601 String 1`] = `
<time>
  11/11/1999
</time>
`;

exports[`Storyshots Atoms | DateTime With Date Only 1`] = `
<time>
  1/18/1970
</time>
`;

exports[`Storyshots Atoms | DateTime With Date Time As Iso 8601 String 1`] = `
<time>
  11/11/1999, 10:11
</time>
`;
